Fix sub-heading spacing, add updated activity styles

--- a/crt_portal/static/sass/custom/complaint.scss
+++ b/crt_portal/static/sass/custom/complaint.scss
@@ -35,28 +35,26 @@ $complaint-header-min-height: 200px;
 }
 
 .activity-stream {
-  .heading {
-    background: $blue-warm-vivid-70;
-    color: white;
-    font-size: 22px;
-    padding: 1rem;
-    padding-left: 1.5rem;
-    text-transform: uppercase;
-  }
   .crt-portal-card__content {
     max-height: 368px;
     overflow-y: scroll;
   }
 
   .activity-stream-list {
-    padding-top: 1.25rem;
-
     .activity-stream-item {
-      border-bottom: 1px solid $theme-color-base-lighter;
+      border-bottom: 1px solid #C6CACE;
       padding: .5rem 0 .5rem 0;
+
+      &:first-child {
+        padding-top: 0;
+      }
 
       &:not(:first-child) {
         margin-top: 1rem;
+      }
+
+      &:last-child {
+        border-bottom: none;
       }
 
       .date {
